# advanced-programming-game

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.md  backtrace.sh  compile_flags.txt  seg_wrapper.sh
.circleci/: config.yml
assets/levels/: level_0.toml  level_1.toml  level_3.toml  level_4.toml
lib/tomlplusplus/include/tomlplusplus/: toml.hpp
report/: project_report.html
src/: camera.h  factory.cc  factory.cpp  factory.h  factory.hpp  game.cc  game.cpp  game.h  game.hpp  main.cc  main.cpp  world.cc  world.h
src/controllers/: keyboard.cc  keyboard.cpp  keyboard.h  recource_manager.cc  recource_manager.cpp  resource_manager.h  resource_manager.hpp
src/core/: CMakeLists.txt  camera.hpp  world.cpp  world.hpp
src/core/math/: vec.hpp
src/core/subject/: factory.hpp  goal.hpp  subject.cpp  subject.hpp  tile.hpp
src/core/subject/entity/: entity.cpp  entity.hpp
src/core/utils/: genvec.hpp  levelloader.cpp  levelloader.hpp  log.cpp  log.hpp  stopwatch.cpp  stopwatch.hpp  types.hpp
src/math/: vec.h
src/observer/: observer.h
src/observer/view/: player.h  subject.cc  subject.h
src/state/: gamestate.cc  gamestate.cpp  gamestate.h  gamestate.hpp  state.cc  state.cpp  state.h  state.hpp  statemanager.cc  statemanager.cpp  statemanager.h  statemanager.hpp
src/subject/: factory.h  goal.h  subject.cc  subject.h  tile.h
src/subject/entity/: entity.cc  entity.h
src/utils/: genvec.h  keyboard.cc  keyboard.h  levelloader.cc  levelloader.h  log.cc  log.h  stopwatch.cc  stopwatch.h
src/view/: subject.cpp  subject.hpp
test/: genvec.cc  genvec.cpp  levelloader.cc  levelloader.cpp  vec.cc  vec.cpp
test/res/data/: level_0.toml
